--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
+            <img src="images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
+          <img src="images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
+          <img src="images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
+          <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
       </div>
     </div>
     <h2> Who Am I?</h2>
-    
+
     <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
 
     <br>
