--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
 
   <body>
 
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#">
             <!-- need to insert crab icon image below -->
-            <img src="images/rockcrab.jpg" width="30" height="30" alt="crab icon">
+            <img src="images/artycrab.jpg" width="30" height="30" alt="crab icon">
           </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -50,11 +48,6 @@
        </form>
      </div>
    </nav>
-
-
-      </div>
-    </div>
-
 
     <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
 
