--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="contrast">
+        <nav class="navbar sticky-top navbar-light bg-light">
           <a class="navbar-brand" href="#">
-            <!-- need to insert crab icon image below -->
-            <img src="images/artycrab.jpg" width="30" height="30" alt="crab icon">
+            <img src="/images/chimp.jpg" width="30" height="30" alt="crab icon">
           </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -30,48 +30,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto">
          <li class="nav-item active">
-           <a class="nav-link" href="#">Crab...<span class="sr-only">(current)</span></a>
+           <a class="nav-link" href="#Crab...">Crab...<span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Draws</a>
+           <a class="nav-link" href="crabwears.html">Wears</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Wears</a>
+           <a class="nav-link" href="crabdraws.html">Draws</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Recommends</a>
+           <a class="nav-link" href="crabrecommends.html">Recommends</a>
          </li>
        </ul>
-       <form class="form-inline my-2 my-lg-0">
-         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-       </form>
+
      </div>
    </nav>
-
+</div>
 
     <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <div class="
-      sqs-gallery-container
-      sqs-gallery-block-grid
-      sqs-gallery-aspect-ratio-square
-      sqs-gallery-thumbnails-per-row-6">
-
-      <footer class="Footer" role="contentinfo" data-controller="FooterBreakpoints" data-controllers-bound="FooterBreakpoints">
-
-        <div class="Footer-inner clear">
-
-
-
-
-
-<div class="text-overlay">
+<section id=carousel>
+  <div class="text-overlay">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -86,10 +67,14 @@
         <div class="carousel-item">
           <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
-          <div class="centered">I am Crab</div>I
+          <div class="centered">just_crab</div>I
       </div>
     </div>
+  </div>
     <br>
+  </section>
+
+<section id=Crab...>
   <div class="contrast">
       <h2> Who Am I?</h2>
       <div class="container">
@@ -103,12 +88,9 @@
 <p2>
       I woke up like this
       </p2>
-      <style>
-.vl {
-  border-left: 6px solid white;
-  height: 500px;
-}
-</style>
+
+
+
 
 <div class="vl"></div>
 <br>
@@ -121,6 +103,8 @@
 
 <div id="pixlee_container">
 </div>
+</section>
+
 <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
 <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
