--- a/index.html
+++ b/index.html
@@ -76,27 +76,21 @@
           <div class="centered text-overlay">just_crab</div>
       </div>
     </div>
-    <br>
 </section>
-
 <section id=About-Crab>
   <div class="contrast2">
     <div class="container-fluid">
       <div class="row">
         <div class="col-7">
             <h6>about me</h6>
-            <img src="images/wokeuplikethiscrab.jpg" class="image-fluid" "imageshadow">
+            <img src="images/wokeuplikethiscrab.jpg" class="imageshadow" "imagefluid">
             </div>
-            <div class="col-5">
-              <p>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.<p/>
+            <div class="col-5"
+              <p><span>I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share with you aspects of my very busy and important life.</span><p/>
         </div>
         </div>
     </div>
-  <br>
-<div class="vl"></div>
 <br>
-<br>
-
 <div id="pixlee_container">
   <h6>follow me</h6>
 </div>
