--- a/crabdraws.html
+++ b/crabdraws.html
@@ -133,6 +133,94 @@
 
     <br>
 
+    <!--testing hover. HOW TO GRID-->
+        <div class="contrast">
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                      <img src="images/orang.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Orangutan I</div>
+                        <div class="project-name">Acrylic on paper 2018</div>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                    <img src="images/orang2.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Orangutan II</div>
+                        <div class="project-name">Gouache on paper 2019</div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                    <img src="images/giraffe1.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Giraffe I</div>
+                        <div class="project-name">Acrylic on paper 2018</div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                    <img src="images/giraffe2.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Giraffe II</div>
+                        <div class="project-name">Acrylic on paper 2018</div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                    <img src="images/chimp2.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Throwing Bananas</div>
+                        <div class="project-name">Acrylic on linen 2018</div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="container-fluid p-0">
+              <div class="row no-gutters popup-gallery">
+                <div class="col-lg-8 col-sm-10">
+                  <div class="hovercontainer">
+                    <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
+                      <div class="overlay">
+                        <div class="orangutantext">Kenyan Chimp</div>
+                        <div class="project-name">Acrylic on Paper, 2018</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
     <div class="contrast">
     <section class="p-0" id="portfolio">
         <div class="container-fluid p-0">
@@ -227,17 +315,6 @@
                   </div>
                 </a>
             </div>
-        <div>
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">What you sayin</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-        </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
