--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -29,7 +29,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-7">
-            <img src="images/pensivereviewcrab.jpg" class="image-fluid imageshadow2">
+            <img src="images/pensivereviewcrab.jpg" class="img-fluid imageshadow2">
           </div>
             <div class="col-5">
               <h3><br><br>As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
