--- a/crabwears.html
+++ b/crabwears.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-<h1 id="header" class="centered">I love a bit of red</h1>
+<h1 id="header" class="centered">I wear</h1>
 <div class="parallax">
 </div>
 
