--- a/crabdraws.html
+++ b/crabdraws.html
@@ -15,7 +15,7 @@
         <style>
       .hovercontainer{
       position: relative;
-      width: 50%;
+      width: 100%;
     }
 
     .image {
@@ -43,9 +43,9 @@
 
     .orangutantext{
       color: white;
-      font-size: 25px;
+      font-size: 30px;
       position: absolute;
-      top: 50%;
+      top: 45%;
       left: 50%;
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
@@ -55,7 +55,7 @@
 
     .project-name{
       color: white;
-      font-size: 20px;
+      font-size: 17px;
       position: absolute;
       top: 60%;
       left: 50%;
@@ -72,14 +72,9 @@
 
   <body>
 
-
-
-
   <h1 id="header" class="centered">I draw too</h1>
     <div class="parallax2">
     </div>
-
-
 
     <div contrast>
         <div class="media">
@@ -134,187 +129,75 @@
     <br>
 
     <!--testing hover. HOW TO GRID-->
-        <div class="contrast">
 
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                      <img src="images/orang.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                    </div>
-                </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="hovercontainer">
+            <img src="images/orang.jpg" alt="Avatar" class="image">
+              <div class="overlay">
+                <div class="orangutantext">Orangutan I</div>
+                <div class="project-name">Acrylic on paper 2018</div>
               </div>
             </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/orang2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Orangutan II</div>
-                        <div class="project-name">Gouache on paper 2019</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe1.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe I</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/giraffe2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Giraffe II</div>
-                        <div class="project-name">Acrylic on paper 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimp2.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Throwing Bananas</div>
-                        <div class="project-name">Acrylic on linen 2018</div>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="container-fluid p-0">
-              <div class="row no-gutters popup-gallery">
-                <div class="col-lg-8 col-sm-10">
-                  <div class="hovercontainer">
-                    <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
-                      <div class="overlay">
-                        <div class="orangutantext">Kenyan Chimp</div>
-                        <div class="project-name">Acrylic on Paper, 2018</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-
-    <div class="contrast">
-    <section class="p-0" id="portfolio">
-        <div class="container-fluid p-0">
-          <div class="row no-gutters popup-gallery">
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="imgages/orang.jpg">
-                  <img class="img-fluid" src="images/orang.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Orangutan I
-                      </div>
-                    <div class="project-name">
-                      Gouache on paper 2019
-                    </div>
-                  </div>
-                </div>
-              </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="images/orang2.jpg">
-              <img class="img-fluid" src="images/orang2.jpg" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                      Orangutan II
-                    </div>
-                    <div class="project-name">
-                      Gouache on paper 2019
-                    </div>
-                </div>
-              </div>
-            </a>
         </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="images/giraffe1.jpg">
-                  <img class="img-fluid" src="images/giraffe1.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Giraffe I
-                      </div>
-                      <div class="project-name">
-                        Acrylic on paper 2018
-                      </div>
-                    </div>
-                  </div>
-                </a>
+        <div class="col-sm">
+            <div class="hovercontainer">
+              <img src="images/giraffe1.jpg" alt="Avatar" class="image">
+                <div class="overlay">
+                  <div class="orangutantext">Giraffe I</div>
+                  <div class="project-name">Acrylic on paper 2018</div>
+              </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="images/giraffe2.jpg">
-                  <img class="img-fluid" src="images/giraffe2.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Giraffe II
-                      </div>
-                      <div class="project-name">
-                        Acrylic on paper 2018
-                      </div>
-                    </div>
-                  </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="imageschimp2.jpg">
-                  <img class="img-fluid" src="images/chimp2.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Throwing Bananas
-                      </div>
-                      <div class="project-name">
-                        Acrylic on linen 2018
-                      </div>
-                    </div>
-                  </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a class="portfolio-box" href="images/chimpsquare.jpg">
-                  <img class="img-fluid" src="images/chimpsquare.jpg" alt="">
-                  <div class="portfolio-box-caption">
-                    <div class="portfolio-box-caption-content">
-                      <div class="project-category text-faded">
-                        Kenyan Chimp
-                      </div>
-                      <div class="project-name">
-                        Acrylic on Paper, 2018
-                      </div>
-                    </div>
-                  </div>
-                </a>
-            </div>
+        </div>
+        <div class="col-sm">
+            <div class="hovercontainer">
+              <img src="images/orang2.jpg" alt="Avatar" class="image">
+                <div class="overlay">
+                  <div class="orangutantext">Orangutan II</div>
+                  <div class="project-name">Gouache on paper 2019</div>
+                </div>
+              </div>
+          </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col-sm">
+          <div class="hovercontainer">
+            <img src="images/giraffe2.jpg" alt="Avatar" class="image">
+              <div class="overlay">
+                <div class="orangutantext">Giraffe II</div>
+                <div class="project-name">Acrylic on paper 2018</div>
+              </div>
+          </div>
+        </div>
+
+        <div class="col-sm">
+          <div class="hovercontainer">
+            <img src="images/chimp2.jpg" alt="Avatar" class="image">
+              <div class="overlay">
+                <div class="orangutantext">Throwing Bananas</div>
+                <div class="project-name">Acrylic on linen 2018</div>
+              </div>
+          </div>
+        </div>
+
+        <div class="col-sm">
+          <div class="hovercontainer">
+            <img src="images/chimpsquare.jpg" alt="Avatar" class="image">
+              <div class="overlay">
+                <div class="orangutantext">Kenyan Chimp</div>
+                <div class="project-name">Acrylic on Paper, 2018</div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+<br>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
